--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -519,7 +519,7 @@ function getMarkerURL(markerId) {
 function gotoMarkerByName(name) {
   for (marker of map.getLayer('markers')._geoList) {
     let o = marker.properties;
-    if (name == o.name) {
+    if (name == o.name || name == o.form_id) {
       map.animateTo({center: marker.getCoordinates(), zoom:(5), pitch:(0), bearing:(0)});
       marker.show();
       popupOnClick({target: marker});
