--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -773,6 +773,9 @@ function postprocessMarkers(data){
 
     if (o.type=='BOOK' && o.editor_id.includes('PerkMag')) {
       o.type = '_Magazine';
+      if (o.name == "005 Comic") o.name = '005';
+      let issue = o.editor_id.replace(/^.*(\d+)$/, '$1');
+      if (issue) o.name = o.name +' '+issue;
     }
 
     if (o.type=='BOOK') {
