--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -750,20 +750,14 @@ function loadData() {
 }
 
 function postprocessMarkers(data){
-  let nameReplace = {
-    'Dog': 'Churchill',
-  }
-
   out = [];
 
   for (o of data.markers) {
-    if (s = nameReplace[o.name]) {
-      o.original_name = o.name;
-      o.name = s;
-    }
+    let orig_name = o.name;
 
     if (o.type=='NPC_' && o.editor_id && (o.editor_id.includes('Companion') || o.editor_id=='Folon_NPC_CamelotPendragon')) {
       o.type = '_Companion';
+      if (o.name == 'Dog') o.name = 'Churchill';
     }
 
     if (o.type=='BOOK' && o.editor_id.includes('Card')) {
@@ -772,18 +766,17 @@ function postprocessMarkers(data){
 
     if (o.type=='BOOK' && o.editor_id.includes('PerkMag')) {
       o.type = '_Magazine';
-      let orig_name = o.name;
       if (o.name == "005 Comic") o.name = '005';
       if (o.name == "D.I.Y.") o.name = 'DIY: The Householder\'s Handbook';
       let issue = o.editor_id.replace(/^.*(\d\d)$/, '$1');
       if (issue) o.name = o.name +' '+ parseInt(issue);
-      if (orig_name!=o.name) o.original_name = orig_name;
     }
 
     if (o.type=='BOOK') {
       continue;
     }
 
+    if (orig_name!=o.name) o.original_name = orig_name;
     out.push(o);
   }
 
