--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -187,7 +187,7 @@ function createMap() {
     maxPitch: 80,
     spatialReference : {
       projection : 'identity',
-      resolutions: [8,4,2,1,1/2,1/4,1/8,1/16,1/32,1/64].map(x=>x*scale),
+      resolutions: [8,4,2,1,1/2,1/4,1/8,1/16,1/32,1/64,1/128].map(x=>x*scale),
       fullExtent : { top: top, left: left, bottom: bottom, right: right },
     },
     baseLayer: new maptalks.TileLayer('base', {
