--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -785,8 +785,10 @@ function postprocessMarkers(data){
       if (issue) o.name = o.name +' '+ parseInt(issue[1]);
     }
 
-    if (o.type=='BOOK') {
-      //continue;
+    if (o.type=='Settlement') {
+      if (o.name == 'Oval') {
+        o.type = 'Pond / Lake';
+      }
     }
 
     if (orig_name!=o.name) o.original_name = orig_name;
