--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -51,7 +51,7 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
     <form id="search-form">
       <div class="search-input-wrapper input-group">
         <button id="search-close" type="button" class="btn collapsed">x</button>
-        <input id="search-input" class="form-control" type="text" placeholder="Search for name, editor id, or form id..." autofocus/>
+        <input id="search-input" class="form-control" type="text" placeholder="Search..." autofocus/>
         <div class="input-group-append">
           <input type="submit" id="search-submit" type="button" class="btn" value="Search" />
         </div>
@@ -947,7 +947,7 @@ window.onload = function(event) {
         continue;
       }
 
-      if (count == 150) {
+      if (count == 100) {
         break;
       }
 
